merge usgs master